--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "init-db": "node scripts/runSQLScript.js",
+    "init-db": "node src/scripts/runSQLScript.js",
     "migration": "node scripts/runSQLScript.js"
   },
   "dependencies": {
